# Windows

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsBackup.txt  LICENSE  README.md  clean.bat
cmake/: build-libmt-1.0.2u-x64.bat
cmake/modules/: OutputPathConfig.cmake  global_methods.cmake  msvc_methods.cmake
compile/cmakes/shared/encryption/: CMakeLists.txt
compile/cmakes/shared/iconv/: CMakeLists.txt
compile/cmakes/shared/ntobj/: CMakeLists.txt
compile/cmakes/shared/openssl/: CMakeLists.txt
compile/cmakes/shared/reflective/: CMakeLists.txt
compile/cmakes/shared/spdlog/: CMakeLists.txt
compile/cmakes/shared/win/: CMakeLists.txt
compile/cmakes/shared/wxskin/: CMakeLists.txt
compile/cmakes/shared/zip++/: CMakeLists.txt
compile/cmakes/tests/testhttpparser/: CMakeLists.txt
compile/cmakes/tools/update/: CMakeLists.txt  main.cpp
compile/msvc/: 3rdpartys.sln  MT5Projects.sln  Taskman.sln  antiserver.sln  bridge.sln  calendar.sln  cppengine.sln  hacker.sln  libcef-107.0.3-107.0.5304.18_x64_beta.sln  libcef-107.0.3-107.0.5304.18_x86_beta.sln  librarys.sln  mt5project_manager.sln  pchacker.sln  projects.sln  server.sln  shared.sln  tools.sln  upx-3.96.sln
compile/msvc/cef/: libcef_x64-107.0.3-107.0.5304.18.vcxproj  libcef_x86-107.0.3-107.0.5304.18.vcxproj
compile/msvc/shared/: Detours-3.3.9.vcxproj  encryption.vcxproj  iconv.vcxproj  ntobj.vcxproj  openssl.vcxproj  reflective.vcxproj  spdlog.vcxproj  win.vcxproj  wxskin.vcxproj  zip++.vcxproj
compile/msvc/tools/: compress.vcxproj  cppshellcode.vcxproj  developer_tool.vcxproj  encode.vcxproj  encryption.vcxproj  fileedit.vcxproj  packet.vcxproj  respak.vcxproj  shellcode_boot.vcxproj  update.vcxproj
compile/scripts/: librarys.bat  publish.bat
compile/scripts/openssl/: build-libmt-1.0.2u-fips-x64.bat  build-libmt-1.0.2u-fips-x86.bat  build-libmt-1.0.2u-x64.bat  build-libmt-1.0.2u-x86.bat  build-libmt-3.0.5-x64.bat  build-libmt-3.0.5-x86.bat  build-libmt-3.1.0-beta1-x64.bat  build-libmt-3.1.0-beta1-x86.bat
compile/scripts/projects/: CopyToTargetProjects.bat  PostBuildEvent_bridge_launch.bat  PostBuildEvent_bridge_peterminal.bat  PostBuildEvent_bridge_vrfcore.bat  PostBuildEvent_pchacker.bat  PostBuildEvent_peload.bat  PreBuildEvent_hacker.bat  PreBuildEvent_mt5project_bridge.bat  PreBuildEvent_mt5project_quickfix.bat  PreBuildEvent_pchacker.bat  PreBuildEvent_uiframework.bat  PreBuildEvent_vrfcore.bat
compile/scripts/tools/: PostBuildEvent_shellcode_boot.bat  PreBuildEvent_developer_tool.bat  PreBuildEvent_packet.bat
include/: SuzhouZD.hpp  bit7z.h  cef3.hpp  command.h  container.hpp  curl++.hpp  detours.hpp  dllinterface.h  duilib.hpp  duilib_nim.hpp  dump.hpp  encryption.hpp  endian.h  hijack.h  hook_winapi.h  http_parser.hpp  httplib.hpp  iconv.h  iconv.hpp  kaimi.h  libcef.hpp  libcurlpp.hpp  libhttp.hpp  libuv.hpp  libuvpp.hpp  log.h  log4z.hpp  macro.h  malware.hpp  mapfile.hpp  memload++.h  memload.h  mmapfile.h  mmfile.hpp  ntdef.h  ntdll.h  ntobj.h  openssl.hpp  otl4_helper.hpp  otl4_helper_model.hpp  (+22 more)
include/openssl/1.0.2u-fips/: opensslconf.h
include/openssl/3.0.5/: configuration.h
librarys/Win32/Debug/: curlpp-0.8.1.lib  encryption.idb  encryption.lib  iconv.lib  libdui.idb  libiconv_static.idb  libiconv_static.lib  libuv-1.44.2.lib  libzip-1.7.3.lib  libzippp.lib  ntobj.idb  openssl.idb  openssl.lib  reflective.idb  reflective.lib  win.idb  wxskin.lib  zip++.idb  zip++.lib  zlib-1.2.11.lib
librarys/Win32/Release/: bit7z.lib  curlpp-0.8.1.lib  encryption.lib  iconv.lib  libiconv_static.lib  libuv-1.44.2.lib  libzip-1.7.3.lib  libzippp.lib  openssl.lib  wxskin.lib  zip++.lib  zlib-1.2.11.lib
librarys/x64/Debug/: encryption.idb  encryption.lib  iconv.lib  libdui.idb  libiconv_static.lib  libuv-1.44.2.lib  libzip-1.7.3.lib  libzippp.lib  ntobj.idb  openssl.idb  openssl.lib  reflective.idb  reflective.lib  win.idb  wxskin.lib  zip++.idb  zip++.lib  zlib-1.2.11.lib
librarys/x64/Release/: bit7z.lib  curlpp-0.8.1.lib  encryption.lib  iconv.lib  libiconv_static.lib  libuv-1.44.2.lib  libzip-1.7.3.lib  libzippp.lib  openssl.lib  wxskin.lib  zip++.lib  zlib-1.2.11.lib
projects/: CMakeLists.txt  LICENSE  README.md
projects/antiserver/: antiserver.vcxproj  core.cpp  core.h  global.cpp  global.h  main.cpp  server.cpp  server.h  stdafx.h
runtimes/: read.md
src/encryption/: SSLExport.h  base64.cpp  business.cpp  md5.cpp  memade.cpp  openssl.cpp  stdafx.h
src/encryption/openssl/: rsa.cpp
src/hijack/: hijack.cpp  stdafx.h
src/iconv/: libiconv.cpp  stdafx.h
src/ntobj/: global.cpp  loader.cpp  localdata.cpp  ntobj.cpp  ntobj_private.cpp  ready.cpp  route.cpp  stdafx.h
src/openssl/: business.cpp  openssl.cpp  stdafx.h
src/reflective/: Export.h  define.h  reflecive2.cpp  reflective.cpp  stdafx.h
src/spdlog/: spdlog.cpp  spdlog.h  stdafx.h
src/win/: GroupPolicy.cpp  ICMLuaUtil.cpp  Kaimi.cpp  encryption.cpp  file.cpp  hdd.cpp  packet.cpp  peload.cpp  peload2.cpp  process.cpp  reflective.cpp  registry.cpp  res.cpp  service.cpp  stdafx.h  tcpip.cpp  time.cpp  win.cpp  window.cpp
src/wxskin/: MDIParentFrame.cpp  app.cpp  frame.cpp  frameskin.cpp  misc.cpp  skinobj.cpp  stdafx.h  wxskin.cpp
src/zip++/: stdafx.h  zip++.cpp
tests/testbridge/: imgui.ini  main.cpp  stdafx.h  testbridge.vcxproj
tests/testcalendar/: main.cpp  stdafx.h  testcalendar.vcxproj
tests/testhacker/: main.cpp  stdafx.h  testhacker.vcxproj
tests/testhttpparser/: main.cpp
tests/testpchacker/: main.cpp  stdafx.h  testpchacker.vcxproj
tests/testphysical/: main.cpp  stdafx.h  testphysical.vcxproj
tests/testvrfcore/: imgui.ini  main.cpp  testvrfcore.vcxproj
tools/Hex_workshop_v680/: ReadMe.txt
tools/NASM/: nasmpath.bat
tools/npp.8.1.9.2.portable.x64/: config.xml  langs.xml  session.xml
tools/upx/: DownTool.UPX.Process.X64-newDownTool.bat  DownTool.UPX.Process.X64.bat  DownTool.UPX.Process.X86-newDownTool.bat  DownTool.UPX.Process.X86.bat  MalwareDownTool.UPX.Process.X64.bat  MalwareDownTool64.UPX.Process.X64.bat  MalwareDownTool86.UPX.Process.X86.bat  OnlineDownTool.UPX.Process.X64.bat
(+3734 files in other folders)
